# aoc2022

./: .gitignore  create_day.py  day.template  pyproject.toml  test_day.template
src/: base.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py
tests/: base.py  test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py
