[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Lucas Queiroz <lucas.queiroz@pagefreezer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
